# mrlab-audio-server

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  update_version.bat
.github/workflows/: build.yml
doc/: OSC_Audioserver.md  OSC_Prodigy_Audiomatrix.md  TotalMixOSCControl.md  osc_audioserver.pd  osc_matrix.pd
doc/examples/: Jungle.yaml  Music.yaml  PdFly.yaml  PdFly_mac.yaml  Reverb.yaml  Reverb_mac.yaml  pd-jungle.yaml  reaper-music.yaml
patches/: liblo_addmethod.patch  liblo_stringview.patch
resources/: CMakeLists.txt
resources/Config/: SA_VBAP.yaml  Stereo_Walls.yaml  amps-mute.yaml  amps_shutdown.yaml  amps_unmute.yaml  matrix-default.yaml  mixer_default.yaml  pd-test-mac.yaml  pd_fly.yaml  pd_jungle.yaml  pdu_shutdown.yaml  pdu_start.yaml  reaper-test-mac.yaml  reaper_music.yaml  reaper_reverb.yaml  reaper_test_mac.yaml
resources/WebGUI/: README.md  index.html  style.css  version.txt
resources/WebGUI/scenes/: Curved_LED_Standard.html  Curved_LED_Standard.js  Curved_LED_Stereo.html  Curved_LED_Stereo.js  SA_VBAP.html  SA_VBAP.js  SA_XX_VBAP.html  SA_XX_VBAP.js  Stereo_Walls.html  Stereo_Walls.js  control.html  control.js  demo_fly.html  demo_fly.js  demo_jungle.html  demo_jungle.js  demo_music.html  demo_music.js  demo_reverb.html
resources/WebGUI/scripts/: control.js  demo_fly.js  demo_jungle.js  input-controls.js  main.js  osc-handler.js
resources/webgui/: README.md  index.html  style.css
resources/webgui/scenes/: control.html  demo-fly.html  demo-jungle.html  demo-music.html  demo-reverb.html  demo_fly.html  demo_music.html  demo_reverb.html
resources/webgui/script/: main.js  osc-handler.js
resources/webgui/scripts/: control.js  demo-fly.js  demo_fly.js  main.js  osc-handler.js
resources/webgui_minimal/: README.md  index.html  style.css
resources/webgui_minimal/script/: osc-handler.js
src/: CMakeLists.txt  Config.h  Exceptions.h  Globals.cpp  Globals.h  Main.cpp
src/controller/: AppConfigController.cpp  AppConfigController.h  AppController.cpp  AppController.h  AppHandle.cpp  AppHandle.h  AppHandleOscAgent.cpp  AppHandleOscAgent.h  ConfigController.cpp  ConfigController.h  ConfigOscAgent.cpp  ConfigOscAgent.h  MainController.cpp  MainController.h  MatrixController.cpp  MatrixController.h  MatrixControllerOscAgent.cpp  MatrixControllerOscAgent.h  MatrixOscAgent.cpp  MatrixOscAgent.h  OscAgent.h  OscController.cpp  OscController.h  OscEndpoint.h  SubPathOscAgentWithEndpoint.cpp  SubPathOscAgentWithEndpoint.h  TotalmixController.cpp  TotalmixController.h  UdpEndpoint.cpp  UdpEndpoint.h  WebServerController.cpp  WebServerController.h  WebSocketController.cpp  WebSocketController.h  YamlConfig.cpp  YamlConfig.h
src/osc/: Address.h  Error.h  Message.h  Util.h
src/util/: ListenerInterface.h  Logger.h  MRLabLogger.h  SupportFileLocation.h
src/util/osc/: OSCAddressSpace.h  OSCHelpers.h  OSCInputStream.h  OSCMessageOrBundle.h  OSCOutputStream.h  OSCPacket.h
src/view/: AppControlComponent.cpp  AppControlComponent.h  LoggingComponent.cpp  LoggingComponent.h  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  ProdigyStatusComponent.cpp  ProdigyStatusComponent.h
test/: AppControllerTest.cpp  CMakeLists.txt  ConfigControllerTest.cpp  OSCTest.cpp  TestGlobals.cpp.in
